--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "karma-bot-universal",
+  "name": "karmabot-universal",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "discord.js": "^12.4.1",
+    "quick.db": "^7.1.3"
+  }
 }
