--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.4.1",
-    "quick.db": "^7.1.3"
+    "mongoose": "^5.11.0"
   }
 }
