--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.4.1",
+    "firebase": "^8.6.8",
     "mongoose": "^5.11.0"
   }
 }
